Fixed h1 header overlapping the main content of the page

--- a/style.css
+++ b/style.css
@@ -48,5 +48,9 @@ body{
         text-align: center;
     }
 
-   
+   h1{
+       margin:auto;
+       text-align: center;
+       font-size: 20px;
+   }
 }
